# ai-commit

./: .gitignore  Cargo.toml  LICENSE  README.md  release-notes.md
.github/workflows/: ci.yaml
src/: api.rs  args.rs  git.rs  main.rs  utils.rs
src/includes/: default_filters.txt  prompt_template.txt  system_prompt.txt
