[package]
name = "ai-commit"
version = "0.1.1"
edition = "2024"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
console = "0.15.11"
dotenv = "0.15.0"
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", default-features = false, features = ["macros", "process", "rt-multi-thread"] }
url = "2.5.4"
